# game_of_life_rust

./: .gitignore  README.md
console_client/: Cargo.toml
console_client/src/: main.rs
game_of_life_logic/: Cargo.toml
game_of_life_logic/src/: cell_impl.rs  lib.rs  types.rs  universe_console_view_impl.rs  universe_impl.rs
web_view/: Cargo.toml
web_view/src/: cell_component.rs  lib.rs  main.rs  patterns_component.rs  universe_component.rs
web_view/static/: index.html  styles.css  web_view.js  web_view.wasm
