[package]
name = "web_view"
version = "0.1.0"
authors = ["Sergey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.14.2", features = ["std_web"] }
game_of_life_logic = { path="../game_of_life_logic" }
